[gd_scene load_steps=36 format=3 uid="uid://cwepv63cdd6be"]

[ext_resource type="Texture2D" uid="uid://x71yae621dsr" path="res://Assets/wormhole (1)-Sheet.png" id="1_6twhv"]
[ext_resource type="Script" uid="uid://bmlslh636stty" path="res://Scripts/component/transition_handler.gd" id="1_feglm"]
[ext_resource type="Script" uid="uid://dladaup331aix" path="res://Scripts/component/transition_layout.gd" id="3_yvx2s"]
[ext_resource type="Texture2D" uid="uid://kyj08tlkj0vm" path="res://Assets/Loopling.png" id="4_wvfoe"]
[ext_resource type="PackedScene" uid="uid://wspt4mwhafhc" path="res://Scenes/component/sound_manager.tscn" id="5_1gjgp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_urcnp"]
atlas = ExtResource("1_6twhv")
region = Rect2(0, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpyod"]
atlas = ExtResource("1_6twhv")
region = Rect2(240, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_mplvr"]
atlas = ExtResource("1_6twhv")
region = Rect2(480, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_vggli"]
atlas = ExtResource("1_6twhv")
region = Rect2(720, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0xgx"]
atlas = ExtResource("1_6twhv")
region = Rect2(960, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrumr"]
atlas = ExtResource("1_6twhv")
region = Rect2(1200, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbbok"]
atlas = ExtResource("1_6twhv")
region = Rect2(1440, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0uwk"]
atlas = ExtResource("1_6twhv")
region = Rect2(1680, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_mffef"]
atlas = ExtResource("1_6twhv")
region = Rect2(1920, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h5y0"]
atlas = ExtResource("1_6twhv")
region = Rect2(2160, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0lwx"]
atlas = ExtResource("1_6twhv")
region = Rect2(2400, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_igw8g"]
atlas = ExtResource("1_6twhv")
region = Rect2(2640, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlvbq"]
atlas = ExtResource("1_6twhv")
region = Rect2(2880, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v2b7"]
atlas = ExtResource("1_6twhv")
region = Rect2(3120, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_p35vf"]
atlas = ExtResource("1_6twhv")
region = Rect2(3360, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_stxua"]
atlas = ExtResource("1_6twhv")
region = Rect2(3600, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_37jd4"]
atlas = ExtResource("1_6twhv")
region = Rect2(3840, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfj8f"]
atlas = ExtResource("1_6twhv")
region = Rect2(4080, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_so8ax"]
atlas = ExtResource("1_6twhv")
region = Rect2(4320, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu1ej"]
atlas = ExtResource("1_6twhv")
region = Rect2(4560, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w0f0"]
atlas = ExtResource("1_6twhv")
region = Rect2(4800, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1fg3"]
atlas = ExtResource("1_6twhv")
region = Rect2(5040, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrtin"]
atlas = ExtResource("1_6twhv")
region = Rect2(5280, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_tar5f"]
atlas = ExtResource("1_6twhv")
region = Rect2(5520, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtohw"]
atlas = ExtResource("1_6twhv")
region = Rect2(5760, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_tscpr"]
atlas = ExtResource("1_6twhv")
region = Rect2(6000, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1krg"]
atlas = ExtResource("1_6twhv")
region = Rect2(6240, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qtx6"]
atlas = ExtResource("1_6twhv")
region = Rect2(6480, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c7y5"]
atlas = ExtResource("1_6twhv")
region = Rect2(6720, 0, 240, 135)

[sub_resource type="SpriteFrames" id="SpriteFrames_feglm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_urcnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpyod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mplvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vggli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0xgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrumr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbbok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0uwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mffef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h5y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0lwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igw8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlvbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v2b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p35vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stxua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37jd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfj8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so8ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu1ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w0f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1fg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrtin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tar5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtohw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tscpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1krg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qtx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c7y5")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="TransitionHandler" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_feglm")

[node name="background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="game_animated_explosion_bg" type="AnimatedSprite2D" parent="background"]
texture_filter = 1
position = Vector2(655.5, 360)
scale = Vector2(6.47321, 5.5)
sprite_frames = SubResource("SpriteFrames_feglm")

[node name="transition_layout" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_yvx2s")

[node name="main_to_game" type="Control" parent="transition_layout"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="plooy" type="TextureRect" parent="transition_layout/main_to_game"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 8.79998
anchor_top = 5.60002
anchor_right = 12.775
anchor_bottom = 10.05
offset_left = 0.000671387
offset_top = -0.000671387
offset_right = -0.00012207
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
rotation = -6.28319
pivot_offset = Vector2(150, 150)
texture = ExtResource("4_wvfoe")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="top_position" type="Marker2D" parent="transition_layout/main_to_game/plooy"]
position = Vector2(398.002, -337.999)

[node name="fall_position" type="Marker2D" parent="transition_layout/main_to_game/plooy"]
position = Vector2(395, 217.001)

[node name="shrink_position" type="Marker2D" parent="transition_layout/main_to_game/plooy"]
position = Vector2(605, 111.002)

[node name="SoundManager" parent="." instance=ExtResource("5_1gjgp")]
